# Robotic_and_Computer_Vision_Projects_cpp_1

./: README.md
Capture_Data_Kinect1_Kinect2(Registered)_ZED/: CMakeLists.txt  main.cpp
Capture_Data_Kinect1_Kinect2(UnRegistered)_ZED/: CMakeLists.txt  main.cpp
Chessboard_Corners_Detection/: CMakeLists.txt  main.cpp
Compare_Depth_form_Aruco_and_ZED/: CMakeLists.txt  main.cpp
Compute_3D_Normals_Keypoints_Correspondences/: CMakeLists.txt  main.cpp
Compute_Depth_Error_in_RGBD_Sensors/: CMakeLists.txt  main.cpp
Compute_Depth_Error_in_RGBD_Sensors/Data/: calib_params.txt
Compute_Depth_Error_in_RGBD_Sensors/dCP/: CMakeLists.txt  buildInfo.mat  dCP.cpp  dCP.h  dCP_emxAPI.cpp  dCP_emxAPI.h  dCP_emxutil.cpp  dCP_emxutil.h  dCP_types.h  rtGetInf.cpp  rtGetNaN.cpp  rtw_proj.tmw  rtwtypes.h
Compute_Depth_RMS_Error/: CMakeLists.txt  main.cpp
Compute_Depth_RMS_Error/input/: arucoConfig_7.yml  e1_gt_poses.txt  e1_zed_poses.txt  mm_our.yml
Compute_Depth_RMS_Error/input/output/: e1_r3D_data.txt
Compute_Essential_and_Fundamental_Matrix/: CMakeLists.txt  main.cpp
Compute_Hausdorff_Distance/: CMakeLists.txt  main.cpp
Convert_SVO(LeftCam)_Video_to_AVI/: CMakeLists.txt  main.cpp
Convert_SVO(LeftCam)_Video_to_AVI/include/: utils.hpp
Correct_Sitting_Position/: CMakeLists.txt  main.cpp
Crop_Images/: CMakeLists.txt  main.cpp
Detect_Aruco_Marker/: CMakeLists.txt  main.cpp
Detect_Aruco_with_UVC_Cam/: CMakeLists.txt  main.cpp
Detect_Aruco_with_UVC_Cam/Data/: CamParam.yml
Detect_Aruco_with_ZED/: CMakeLists.txt  main.cpp
Detect_FractalMarker_ZED/: CMakeLists.txt  main.cpp
Detect_MarkerMap_on_Video/: CMakeLists.txt  main.cpp
Detect_MarkerMap_on_Video/Data/: mono_params.yml
Extract_3D_Plane_from_ZED_Video/: CMakeLists.txt  main.cpp
Extract_3D_Planes_from_PCL_Cloud/: CMakeLists.txt  main.cpp
