SET(execName mm_track)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(${execName})

FIND_PACKAGE(aruco REQUIRED)
FIND_PACKAGE(OpenCV 3.4.1 REQUIRED)

INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

#SET(EXECUTABLE_OUTPUT_PATH ./${CMAKE_BUILD_TYPE})
SET( CMAKE_CXX_FLAGS "-std=c++11")

ADD_EXECUTABLE(${execName} main.cpp)

TARGET_LINK_LIBRARIES(${execName} ${OpenCV_LIBS} aruco)